--- a/styles.css
+++ b/styles.css
@@ -38,33 +38,36 @@ h1 {
     margin-bottom: 20px;
 }
 
-.dropdown-btn {
-    flex: 1; /* Равная ширина кнопок */
+.dropdown-group {
     margin: 0 5px; /* Отступы между кнопками */
-    padding: 10px 15px;
-    font-size: 16px;
+    padding: 15px;
+    font-size: 100%;
     font-weight: bold;
-    color: white;
-    background-color: #007f3f; /* Цвет кнопки */
+    color: rgb(255, 255, 255);
+    background-color: #ffffffcc; /* Цвет кнопки */
     border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .dropdown-btn:hover {
+    flex: 1; 
     background-color: #005f2d; /* Цвет при наведении */
 }
 
 /* Строка поиска */
 .search-bar {
     display: flex;
+    flex: 1;
     align-items: center;
     background-color: #ffffffcc;
     border: 1px solid #ddd;
     border-radius: 5px;
     padding: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
 }
 
 .search-icon {
@@ -103,6 +106,7 @@ h1 {
 }
 
 .schedule-table th, .schedule-table td {
+    background-color: #dddddd9a;
     border: 1px solid #000;
     padding: 1px;
     text-align: center;
@@ -139,7 +143,7 @@ h1 {
 }
 
 /* Изменение цвета строки при наведении */
-.schedule-table tr:not(:first-child):hover {
+.schedule-table tr:hover {
     background-color: #f8ffe5; /* Лимонно-белый цвет */
     transition: background-color 0.3s ease; /* Плавный переход */
 }
